--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
-    id("io.papermc.paperweight.userdev") version "2.0.0-beta.14"
+    id("com.gradleup.shadow") version "9.0.0-beta7"
     id 'de.eldoria.plugin-yml.paper' version '0.7.0'
     id 'xyz.jpenilla.run-paper' version "2.3.1"
 }
 
 group = 'dev.slne.surf.serverbrandcustomizer'
-version = '1.21.4-1.0.0-SNAPSHOT'
+version = '1.21.4-1.0.0'
 
 repositories {
     mavenCentral()
@@ -19,8 +19,9 @@ repositories {
 }
 
 dependencies {
-    paperweightDevelopmentBundle('io.papermc.paper:dev-bundle:1.21.4-R0.1-SNAPSHOT')
+    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
     paperLibrary 'com.github.retrooper:packetevents-spigot:2.7.0'
+    compileOnly 'io.netty:netty-all:4.1.117.Final'
 }
 
 paper {
@@ -62,6 +63,10 @@ paper {
 tasks {
     runServer {
         minecraftVersion('1.21.4')
+    }
+
+    shadowJar {
+        archiveClassifier = ''
     }
 }
 
