--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'
-    paperLibrary 'com.github.retrooper:packetevents-spigot:2.7.0'
+    compileOnly 'com.github.retrooper:packetevents-spigot:2.7.0'
     compileOnly 'io.netty:netty-all:4.1.117.Final'
 }
 
@@ -30,31 +30,10 @@ paper {
     apiVersion = '1.21'
     authors = ['twisti']
     description = 'Customize the server brand displayed to the player in the F3 menu'
-    generateLibrariesJson = true
 
     serverDependencies {
-        'ProtocolLib' {
-            required = false
-            load = 'BEFORE'
-        }
-        'ProtocolSupport' {
-            required = false
-            load = 'BEFORE'
-        }
-        'ViaVersion' {
-            required = false
-            load = 'BEFORE'
-        }
-        'ViaBackwards' {
-            required = false
-            load = 'BEFORE'
-        }
-        'ViaRewind' {
-            required = false
-            load = 'BEFORE'
-        }
-        'Geyser-Spigot' {
-            required = false
+        'packetevents' {
+            required = true
             load = 'BEFORE'
         }
     }
@@ -63,6 +42,10 @@ paper {
 tasks {
     runServer {
         minecraftVersion('1.21.4')
+        downloadPlugins {
+            modrinth('packetevents', '2.7.0')
+            modrinth('viaversion', '5.2.2-SNAPSHOT+673')
+        }
     }
 
     shadowJar {
