--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,5 +26,6 @@ jobs:
       - name: Publish
         run: ./gradlew publish
         env: 
+          MAVEN_URL: ${{ secrets.REPO_PUBLISH_URL }}
           MAVEN_USERNAME: ${{ secrets.REPO_PUBLISH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.REPO_PUBLISH_TOKEN }}
