--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    `maven-publish`
+    id 'maven-publish'
     id("com.gradleup.shadow") version "9.0.0-beta7"
     id 'de.eldoria.plugin-yml.paper' version '0.7.0'
     id 'xyz.jpenilla.run-paper' version "2.3.1"
@@ -55,7 +55,8 @@ tasks {
 
 publishing {
     repositories {
-        maven(System.getenv("MAVEN_URL")) { 
+        maven {
+            url = System.getenv("MAVEN_URL")
             name = "maven-snapshots"      
             credentials {
                 username = System.getenv("MAVEN_USERNAME")
@@ -64,8 +65,10 @@ publishing {
         }
     }
 
-    publications.create<MavenPublication>("maven") {
-        from(components["java"])
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
     }
 }
 
